# CN

./: .gitignore
lab01/: task01.pkt  task02.pkt  task03.pkt
lab02/: CMakeLists.txt  client.c  makefile  my_lltoa.c  my_lltoa.h  readme.md  server.c  socket.c  socket.h
lab03/: CMakeLists.txt  Makefile  README.md  client.cpp  const.hpp  convert.cpp  handler.cpp  http_parser.cpp  http_server.cpp  http_server.h  http_server.hpp  server.cpp  statistics.cpp  statistics.hpp  utils.cpp  utils.hpp
lab03/public/: index.html
lab03/public/css/: example.css
lab03/public/errors/: 403.html  404.html  405.html
lab03/public/txt/: example.txt
lab03/statistics/: time.py  visits.txt
lab04/: task.docx  task.pkt
lab05/: README.md  main.py
lab06/: README.md  task.pkt
lab07/: README.md  task.pkt
lab08/: README.md  task.pkt  task1.pkt  task2.pkt  task3.pkt
lab08/doc/: report.tex  title.tex
lab09/: README.md  task.pkt
lab09/doc/: report.tex  title.tex
